@@ -3,6 +3,7 @@ Version: 0.0.5
 Date: ????
   Info:
     - Decouple struct creation/destruction from belt control behaviour
+    - Create the combinator through the checkbox
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 2024. 11. 12
